--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,3 @@
-blinker==1.6.2
-cffi==1.15.1
-click==8.1.6
-cryptography==41.0.2
-Flask==2.3.2
-Flask-Cors==4.0.0
-greenlet==2.0.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-openssl-python==0.1.1
-pycparser==2.21
-pyOpenSSL==23.2.0
-typing_extensions==4.7.1
-Werkzeug==2.3.6
+# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
+flask==2.2.2
+gunicorn==20.1.0
