--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,23 @@
                 ],
                 "projectType": "flask"
             }
-        }
+        },
+        {
+            "name": "Python: Flask",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "app.py",
+                "FLASK_DEBUG": "1"
+            },
+            "args": [
+                "run",
+                "--no-debugger",
+                "--no-reload"
+            ],
+            "jinja": true,
+            "justMyCode": true
+        },
     ]
 }
